--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -10,6 +10,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  opacity: 0;
+  transition: 300ms ease-in opacity;
 }
 
 .inner {
